--- a/app/views/comfy/admin/dashboard/events_list.haml
+++ b/app/views/comfy/admin/dashboard/events_list.haml
@@ -8,16 +8,19 @@
     %span.font-weight-bold
       = @events_list.total_entries
   .table-responsive.my-5
-    = render partial: 'shared/pagination_array', locals: { data: @events_list, model_name: 'Event' }
-    %table.table.table-bordered
+    %table.table
       %thead
         %tr
-          %th= "Events"
-          %th= "Total count of specific event"
-      %thead
-        - @events_list.each do |event_name|
-          %tr
-            %td= link_to event_name, dashboard_events_path(ahoy_event_type: event_name)
-            %td= @events_count[event_name]
+          %th.px-3= sort_link @events_list_q, :distinct_name, 'Event'
+          %th.px-3= sort_link @events_list_q, :count
+          %th.px-3= sort_link @events_list_q, :first_created_at
 
-    = render partial: 'shared/pagination_array', locals: { data: @events_list, model_name: 'Event' }
+      = render partial: 'comfy/admin/dashboard/pagination', locals: { data: @events_list }
+      %tbody
+        - @events_list.each do |event|
+          %tr
+            %td.px-3= link_to event.distinct_name, dashboard_events_path(ahoy_event_type: event.distinct_name)
+            %td.px-3= event.count
+            %td.px-3= event.first_created_at.strftime('%F %T')
+
+    = render partial: 'comfy/admin/dashboard/pagination', locals: { data: @events_list }
