feat(): typo correction

--- a/app/views/comfy/admin/dashboard/visit.haml
+++ b/app/views/comfy/admin/dashboard/visit.haml
@@ -1,7 +1,6 @@
 .page-header
   .h3
-    Event Type:
-    %strong #{params[:ahoy_event_type]}
+    Visit Details
 
 %main{class: 'm-5'}
   .table-responsive.my-5
