--- a/app/views/comfy/admin/v2/dashboard/dashboard.html.haml
+++ b/app/views/comfy/admin/v2/dashboard/dashboard.html.haml
@@ -21,235 +21,25 @@
               %i.fa.fa-caret-down.ml-2
 
   %main{class: 'my-5'}
-    %section.row.vr-analytics-section.vr-analytics-page-visit-events
-      .col{ class: @page_visit_events.load.any? ? "col-lg-9 mb-4" : "col-12" }
-        .d-flex.justify-content-between
-          .vr-analytics-section-header.d-md-flex.justify-content-between.align-items-center
-            .vr-analytics-sub-title
-              = "#{page_name(params[:page])} visits"
-            - if @page_visit_events.load.any?
-              .d-flex.justify-content-between.align-items-center.mt-2.mt-md-0
-                .vr-analytics-count
-                  = @page_visit_events.size 
-                  total visits
-                .vr-analytics-percent-change
-                  = display_percent_change(@page_visit_events.size, @previous_period_page_visit_events.size)
-                .vr-analytics-tooltips{ data: { toggle: "tooltip", placement: "right" }, title: tooltip_content(@page_visit_events.size, @previous_period_page_visit_events.size, params[:interval], @start_date, @end_date) }
-                  ?
-        .vr-analytics-section-body
-          - if @page_visit_events.load.any?
-            = column_chart page_visit_chart_data(@page_visit_events, @start_date, @end_date), colors: ["#88DAE3FF", "#D785E3FF", "#F7C85CFF"], library: { plugins: { legend: { position: "top", align: "end", labels: { padding: 24, boxWidth: 8, usePointStyle: true, font: { size: 16 } } } }  }
-          - else
-            .vr-analytics-blank-states
-              There are no page visit events within the selected date range. 
-              %br
-              Use 'data-violet-track-page-visit="true"' attribute on a html attribute to track page visits.
-              %br
-              %br
-              %code
-                :escaped
-                  <main data-violet-track-page-visit="true" data-violet-event-name="landing-page-viewed" data-violet-event-label="Landing Page">
-                %br
-                :escaped
-                  .
-                %br
-                :escaped
-                  .
-                %br
-                :escaped
-                  </main>
-      - if @page_visit_events.load.any?
-        .col.col-lg-3
-          .vr-analytics-card.vr-analytics-page-visit-events-donut-chart
-            %h5 Website visitors
-            = pie_chart visitors_chart_data(@page_visit_events), colors: ['#F7A47B', '#B5E69A'], donut: true, library: { cutout: 85, plugins: { legend: { position: "bottom",  align: 'start', labels: {boxWidth: 8, usePointStyle: true, font: { size: 16 } } } } }
-
+    = turbo_frame_tag Ahoy::Event::EVENT_CATEGORIES[:page_visit], src: event_analytics_path(event_category: Ahoy::Event::EVENT_CATEGORIES[:page_visit], start_date: @start_date, end_date: @end_date, page: params[:page], interval: params[:interval]), loading: :eager do
+      = "Loading...."
   
     %hr.m-0
-    = render partial: 'events', locals: { events_exists: @click_events.load.any?, events_count: @click_events.size, label_grouped_event: @click_events.with_label.group(:label).pluck(:label, Arel.sql('json_agg(ahoy_events.name)')), previous_period_events_count: @previous_period_click_events.size, previous_grouped_events: @previous_period_click_events.with_label.group(:label).size, title: 'Clicks', type: 'clickables' }
-    - unless @click_events.load.any?
-      .vr-analytics-blank-states
-        There are no click events within the selected date range. 
-        %br
-        Use 'data-violet-track-click="true"' attribute on a html element to track clicks.
-        %br
-        %br
-        %code
-          :escaped
-            <a data-violet-track-click="true" data-violet-event-name="test-link-clicked" data-violet-event-label="Test Link">Test</a>
+    = turbo_frame_tag Ahoy::Event::EVENT_CATEGORIES[:click], src: event_analytics_path(event_category: Ahoy::Event::EVENT_CATEGORIES[:click], start_date: @start_date, end_date: @end_date, page: params[:page], interval: params[:interval]), loading: :eager do
+      = "Loading...."
 
     %hr.m-0
-
-    %section.vr-analytics-section
-      .vr-analytics-section-header
-        .row.align-items-center
-          .vr-analytics-sub-title.col.col-12.col-md-2
-            Watch time
-
-          - if @video_view_events.load.any? 
-            .col.col-md-10
-              .row
-                - watch_time = total_watch_time(@video_view_events)
-                - previous_watch_time = total_watch_time(@previous_period_video_view_events)
-                .col.col-12.col-sm-4.d-flex.align-items-center.my-3.my-sm-0
-                  .vr-analytics-count.ml-0
-                    Total watch time
-                    = to_minutes(watch_time)
-                  .vr-analytics-percent-change
-                    = display_percent_change(watch_time, previous_watch_time)
-                  .vr-analytics-tooltips{ data: { toggle: "tooltip", placement: "right" }, title: tooltip_content(watch_time, previous_watch_time, params[:interval], @start_date, @end_date) }
-                    ?
-            
-                .col.col-12.col-sm-4.d-flex.align-items-center.mb-3.mb-sm-0
-                  .vr-analytics-count.ml-0
-                    Avg. view duration
-                    - view_duration = avg_view_duration(@video_view_events)
-                    - previous_view_duration = avg_view_duration(@previous_period_video_view_events)
-                    = to_minutes(view_duration)
-                  .vr-analytics-percent-change
-                    = display_percent_change(view_duration, previous_view_duration)
-                  .vr-analytics-tooltips{ data: { toggle: "tooltip", placement: "right" }, title: tooltip_content(view_duration, previous_view_duration, params[:interval], @start_date, @end_date) }
-                    ?
-
-                .col.col-12.col-sm-4.d-flex.align-items-center.mb-3.mb-sm-0
-                  .vr-analytics-count.ml-0
-                    Avg. view percentage
-                    - view_percent = avg_view_percentage(@video_view_events)
-                    - previous_view_percent = avg_view_percentage(@previous_period_video_view_events)
-                    = "#{view_percent.round(2)}%"
-                  .vr-analytics-percent-change
-                    = display_percent_change(view_percent, previous_view_percent)
-                  .vr-analytics-tooltips{ data: { toggle: "tooltip", placement: "right" }, title: tooltip_content(view_percent, previous_view_percent, params[:interval], @start_date, @end_date) }
-                    ?
-      - if @video_view_events.load.any? 
-        .vr-analytics-section-body
-          .vr-analytics-event-label 
-            - top_videos = top_three_videos(@video_view_events, @previous_period_video_view_events)
-            = "Top #{top_videos.size} videos"
-
-          .row.mt-4
-            - top_videos.each do |event|
-              .col.col-12.col-lg-5.mb-4
-                .vr-analytics-card
-                  = link_to '', dashboard_events_path(ahoy_event_type: event[:name])
-                  .vr-analytics-card-section
-                    .d-flex 
-                      .vr-analytics-card-resource-poster-conatiner
-                        %img{src: event[:resource_image]}
-                      .vr-analytics-card-resource-title-duration
-                        .vr-analytics-card-resource-title
-                          = link_to event[:resource_title], api_namespace_resource_path(api_namespace_id: event[:namespace_id], id: event[:resource_id])
-                        .vr-analytics-card-resource-duration
-                          = Time.at(event[:duration]/1000).strftime("%M:%S")
-
-                  %hr
-                  .vr-analytics-card-section
-                    .row
-                      .col.col-6
-                        .d-flex.align-items-center
-                          .vr-analytics-count-lg
-                            = to_minutes(event[:total_watch_time])
-                          .vr-analytics-percent-change
-                            = display_percent_change(event[:total_watch_time], event[:previous_period_total_watch_time])
-                        .vr-analytics-event-label.mt-2
-                          Total watch time
-                      .col.col-6 
-                        .d-flex.align-items-center
-                          .vr-analytics-count-lg
-                            = event[:total_views]
-                          .vr-analytics-percent-change
-                            = display_percent_change(event[:total_views], event[:previous_period_total_views])
-                        .vr-analytics-event-label.mt-2
-                          Total views
-      - else
-        .vr-analytics-blank-states
-          There are no video view events within the selected date range. 
-          %br
-          Use 'data-violet-track-video-view="true"' attribute on a video element to track views.
-          %br
-          %br
-          %code
-            :escaped
-              <video data-violet-track-video-view="true" data-violet-resource-id="<%= resource.id %>" data-violet-event-name="intro_video_watch" data-violet-event-label="Intro Video" width="500px"  controls>
-            %br
-            :escaped
-              <source src="<%= resource.props['demo'].file_url %>" type="video/mp4">
-            %br
-            :escaped
-              </video>
-
-          %br
-          %br
-
-          Please make sure 'data-violet-resource-id' is present and Analytics mapping is populated
+    = turbo_frame_tag Ahoy::Event::EVENT_CATEGORIES[:video_view], src: event_analytics_path(event_category: Ahoy::Event::EVENT_CATEGORIES[:video_view], start_date: @start_date, end_date: @end_date, page: params[:page], interval: params[:interval]), loading: :eager do
+      = "Loading...."
         
     %hr.m-0
-    = render partial: 'events', locals: { events_exists: @form_submit_events.load.any?, events_count: @form_submit_events.size, label_grouped_event: @form_submit_events.with_label.group(:label).pluck(:label, Arel.sql('json_agg(ahoy_events.name)')), previous_period_events_count: @previous_period_form_submit_events.size, previous_grouped_events: @previous_period_form_submit_events.with_label.group(:label).size, title: 'Form Submissions', type: 'submitables' }
-    - unless @form_submit_events.load.any?
-      .vr-analytics-blank-states
-        There are no form submission events within the selected date range. 
-        %br
-        Use 'data-violet-track-from-submit="true"' attribute on a form element to track form submissions.
-        %br
-        %br
-        %code
-          :escaped
-            {{ cms:helper render_form, 1, { data: { violet-track-form-submit: true }}}}
-        %br
-        %br
-        Default event name withh me <code>\#{api_namespace.slug}-form-submit</code> and default event label will be <code>\#{api_namespace.slug} Form Submit</code>, which can be overridden with 'data-violet-event-name' and 'data-violet-event-label' respectively.
-        %br
-        %br
-        OR 
-        %br
-        %br
-        %code
-          :escaped
-            <form data-violet-track-form-submit="true" data-violet-event-name="inquiry-form-submited" data-violet-event-label="Inquiry Form">
-          %br
-          :escaped
-            .
-          %br 
-          :escaped
-            .
-          %br
-          :escaped
-            </form>
+    = turbo_frame_tag Ahoy::Event::EVENT_CATEGORIES[:form_submit], src: event_analytics_path(event_category: Ahoy::Event::EVENT_CATEGORIES[:form_submit], start_date: @start_date, end_date: @end_date, page: params[:page], interval: params[:interval]), loading: :eager do
+      = "Loading...."
 
     %hr.m-0
-    = render partial: 'events', locals: { events_exists: @section_view_events.load.any?, events_count: @section_view_events.size, label_grouped_event: @section_view_events.with_label.group(:label).pluck(:label, Arel.sql('json_agg(ahoy_events.name)')), previous_period_events_count: @previous_period_section_view_events.size, previous_grouped_events: @previous_period_section_view_events.with_label.group(:label).size, title: 'Section Views', type: 'viewables' }
-    - unless @section_view_events.load.any?
-      .vr-analytics-blank-states
-        There are no section view events within the selected date range. 
-        %br
-        Use 'data-violet-track-section-view="true"' attribute on a HTML element to track section views.
-        %br
-        %br
-        %code
-          :escaped
-            <div data-violet-track-section-view="true" data-violet-event-name="test-section-viewed" data-violet-event-label="Test Section">
-          %br
-          :escaped
-            .
-          %br 
-          :escaped
-            .
-          %br
-          :escaped
-            </div>
-
-        %br
-        %br
-        Make sure to adjust target visibility threshold for large sections with 'data-violet-visibility-threshold'.
-        %br
-        Threshold indicates at what percentage of the target's visibility the tracking should be executed
-        %br
-        %a{href: 'https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API#thresholds'}
-          https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API#thresholds
-
-        %br
-        %br
-        By default, the threshold value is 0.75
+    = turbo_frame_tag Ahoy::Event::EVENT_CATEGORIES[:section_view], src: event_analytics_path(event_category: Ahoy::Event::EVENT_CATEGORIES[:section_view], start_date: @start_date, end_date: @end_date, page: params[:page], interval: params[:interval]), loading: :eager do
+      = "Loading...."
 
     %hr.m-0
-    = render partial: 'events', locals: { events_exists: @legacy_and_system_events.load.any?, events_count: @legacy_and_system_events.size, label_grouped_event: @legacy_and_system_events.with_label.group(:label).pluck(:label, Arel.sql('json_agg(ahoy_events.name)')), previous_period_events_count: @previous_period_legacy_and_system_events.size, previous_grouped_events: @previous_period_legacy_and_system_events.with_label.group(:label).size, title: 'Events', type: 'events' }
+    = turbo_frame_tag 'system_events', src: event_analytics_path(event_category: 'system_events', start_date: @start_date, end_date: @end_date, page: params[:page], interval: params[:interval]), loading: :eager do
+      = "Loading...."
